--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="jumbotron">
                     <h1 class="heading heading-underline heading-small">A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper</h1>
                     <footer class="blockquote-footer text-xl text-blue font-weight-bold">By Karthikeya Kaza</footer>
-                    <h1 class="text-underline">Download BS4 helper:</h1>
+                    <h1 class="text-underline"><span class="fa fa-download"></span>&nbsp;Download BS4 helper:</h1>
                     <h2>Instructions:</h2>
                     <a class="link" href="https://github.com/bhogi7589/bs4-helper/raw/main/BS4%20-%20Helper.zip" target="_blank">Click to Download.</a>
                     <h1 class="text-underline">Using CDN:</h1>
