--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="heading heading-underline heading-large">BS4 Helper Preview</h1>
+            <h1 class="heading heading-underline heading-medium">BS4 Helper Preview</h1>
             <div class="section" id="progress">
                 <h1 class="heading heading-underline heading-medium">BS4 Helper Growing Progress Bars</h1>
                 <h1 class="heading heading-underline">Normal Progress Bar</h1>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="section" id="scroll">
-                <h1 class="heading heading-underline heading-medium">BS4 Helper Scroll Indicators</h1>
+                <h1 class="heading heading-underline display-4">BS4 Helper Scroll Indicators</h1>
                 <p class="heading-small text-red">Look at the bottom to see the scroll indicator and scroll this page to see the effect.</p>
             </div>
             <div class="section" id="headings">
@@ -126,7 +126,7 @@
                 <h1 class="heading heading-underline heading-violet">Violet/Purple Heading</h1>
             </div>
             <div class="section" id="highvsnorm">
-                <h1 class="heading heading-underline heading-medium">Highlighted Text vs. Normal text (<code>&lt;mark&gt;</code> element)</h1>
+                <h1 class="heading heading-underline display-4">Highlighted Text vs. Normal text (<code>&lt;mark&gt;</code> element)</h1>
                 <p><mark>Highlighted Text</mark> Normal Text</p>
             </div>
             <div class="section" id="tltip">
@@ -157,7 +157,7 @@
                 <p class="text-comment">...and other possible combinations.</p>
             </div>
             <div class="section theme-light" id="additionalcolors">
-                <h1 class="heading heading-underline heading-medium">BS4 Helper Additional Colors</h1>
+                <h1 class="heading heading-underline display-4">BS4 Helper Additional Colors</h1>
                 <p class="text-large color-red-200">Red 200 Text</p>
                 <p class="text-large bg-red-200">Red 200 Background</p>
                 <p class="text-large color-cyan-200">Cyan 200 Text</p>
