--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Preview</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#progress">BS4 Helper Growing Progress Bars</a>
+                            <a class="dropdown-item" href="#loc">BS4 Helper Location Sensor</a>
                             <a class="dropdown-item" href="#scroll">BS4 Helper Scroll Indicators</a>
                             <a class="dropdown-item" href="#headings">BS4 Helper Headings</a>
                             <a class="dropdown-item" href="#highvsnorm">Highlighted Text vs. Normal Text</a>
@@ -100,6 +101,10 @@
                     <button class="btn btn-outline-light timer-btn" id="myresetbtn"></button>
                     <p class="text-white timer-label" id="myp">Remaining Time: 00:02:00</p>
                 </div>
+            </div>
+            <div class="section" id="loc">
+                <h1 class="heading heading-underline heading-medium">BS4 Helper Location Sensor</h1>
+                <div class="location-sensor"></div>
             </div>
             <div class="section" id="scroll">
                 <h1 class="heading heading-underline display-4">BS4 Helper Scroll Indicators</h1>
