--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
                     <h2>Instructions:</h2>
                     <p>If you don't want to download and host BS4 Helper yourself, you can include it from a CDN (Content Delivery Network).</p><br>
                     <h3>Copy the code below and paste it in your <code>&lt;head&gt;</code> tag:</h3>
-                    <code>&lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"&gt;<br>
+                    <code id="init">&lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"&gt;<br>
                     &lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper.css"&gt;<br>
                     &lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"&gt;&lt;/script&gt;<br>
                     &lt;script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"&gt;&lt;/script&gt;<br>
                     &lt;script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"&gt;&lt;/script&gt;<br>
                     &lt;script src="https://bhogi7589.github.io/bs4-helper/bs4-helper.js"&gt;&lt;/script&gt;<br>
-                    </code>
+                    </code><br>
                     <br><br>
                     <h4>You must also import Font Awesome 4 Icons:</h4>
-                    <code>&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"&gt;</code>
+                    <code id="icons">&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"&gt;</code><br>
                     <h4>For more colors and background colors, use the colors and background colors style sheets of BS4 Helper:</h4>
-                    <code>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;<br>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-bg-colors.css"&gt;</code>
+                    <code id="extra">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-colors.css"&gt;<br>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-bg-colors.css"&gt;</code><br>
                     <h4>To enable rotated components, use the rotations stylesheet of BS4 Helper:</h4>
-                    <code>&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-rotations.css"&gt;</code>
+                    <code id="rotations">&lt;link rel="stylesheet" href="https://bhogi7589.github.io/bs4-helper/bs4-helper-rotations.css"&gt;</code><br>
                     <div class="alert alert-warning">
                         <strong>Warning!</strong> BS4 Helper may not work as expected without importing Bootstrap 4!
                     </div>
